--- a/pychess/templates/pychess/index.html
+++ b/pychess/templates/pychess/index.html
@@ -7,95 +7,129 @@ pyChess Home
 
 
 {% block body %}
-
     <style>
+        .playerStats{
+            display:flex;
+            flex-direction: row;
+            flex-basis:10%;
+            align-items:center;
+            justify-content: center;
+        }
 
-        .infoTable {
-            width:65%;
+        .stat{
+            display:flex;
+            font-size:36px;
+            font-weight:bold;
+            height:100%;
+            align-items:center;
+            margin-left:10px;
+            margin-right:10px;
+        }
+
+        .tableContainer{
+            display:flex;
+            flex-direction:row;
+            flex-basis:90%;
+            align-items:center;
+            justify-content:center;
+            margin-bottom:20px;
+        }
+
+        .infoTable{
+            display:flex;
+            flex-direction: column;
+            flex-basis:25%;
+            height:100%;
+            align-items: center;
+            margin-left:10px;
+            margin-right:10px;
+            border:solid;
+            border-color:aliceblue;
+            border-radius:15px;
+            overflow-y:scroll;
+        }
+
+        .infoHeader{
+            width:100%;
+            flex-basis:10%;
+            display:flex;
+            flex-grow:0;
+            flex-shrink:0;
+            align-items: center;
+            justify-content:center;
+            font-size:24px;
+            font-weight:bold;
+        }
+
+        .infoItem{
+            display:flex;
+            width:100%;
+            flex-basis:5%;
+            flex-grow:0;
+            flex-shrink:0;
+            align-items: center;
+            justify-content:center;
+            font-size:20px;
+            font-weight: bold;
         }
 
         @media (max-width:1500px) {
             .infoTable{
-                width:90%;
+                flex-basis:50%;
             }
+
         }
+
     </style>
 
-    <div class="centeredContent">
-        <div class="infoTable" style="display:flex; flex-direction: column; align-items: center; justify-content:flex-start; height:95%;">
+
+    <div class="playerStats">
+        <div class="stat">Wins: {{ completedGames.wins }}</div>
+        <div class="stat">Draws: {{ completedGames.draws }}</div>
+        <div class="stat">Losses: {{ completedGames.losses }}</div>
+    </div>
+
+    <div class="tableContainer">
+        <div class="infoTable">
             
-            <div style="display: flex; flex-direction: row; flex-basis: 10%; flex-shrink:0; width: 100%; text-align:center; justify-content: center;">
-                    <div style="flex-basis:33%;">
-                        <h1>Wins: {{ completedGames.wins }}</h1>
-                    </div>
-                    
-                    <div style="flex-basis:33%;">
-                        <h1 style="margin-left:10%; margin-right: 10%;">Draws: {{ completedGames.draws }}</h1>
-                    </div>
-                    
-                    <div style="flex-basis:33%;">
-                        <h1>Losses: {{ completedGames.losses }}</h1>
-                    </div>
-            </div>
+            <div class="infoHeader">Local Games:</div>
 
-            <div style="display:flex; flex-direction:row; flex-basis:85%; flex-shrink:1; flex-grow:1; width:100%; max-height:85%;">
-                    <div style="display:flex; flex-direction: column; flex-basis:50%; text-align: center; overflow:scroll; border:solid; border-color:aliceblue; border-radius:15px; margin-right:5px;">
-                        <div style="flex-basis:10%;">
-                            <h2>Local Games:</h2>
-                        </div>
+            {% for game in localGames %}
+                <div class="infoItem">
+                    <a href="{% url 'localGame' %}?room={{game.roomCode}}">Room {{ game.roomCode }}</a>
+                </div>
+            {% empty %}
+                <div class="infoItem">No local games to show.</div>
+                <div class="infoItem"><a href="{% url 'play' %}">Try starting a new one here!</a></div>
+            {% endfor %}
 
-                        {% if localGames %}
-                            {% for game in localGames %}
-                                <div style="flex-basis:5%; font-size:24px; font-weight: bold; margin-top:5px;">
-                                    <a href="{% url 'localGame' %}?room={{game.roomCode}}">Room {{ game.roomCode }}</a>
-                                </div>
-                            {% endfor %}
-                        {% else %}
-                            <div>
-                                <h3>No local games to show!</h3>
-                            </div>
-                            <div>
-                                <h3><a href="{% url 'play' %}">Try starting a new one here!</a></h3>
-                            </div>
-                        {% endif %}
-
-
-                    </div>
-                    <div style="display:flex; flex-direction: column; flex-basis:50%; text-align: center; overflow:scroll; border:solid; border-color:aliceblue; border-radius:15px; margin-left:5px;">
-                        <div style="flex-basis:10%;">
-                            <h2>Network Games:</h2>
-                        </div>
-
-                        {% if networkGames %}
-                            {% for game in networkGames %}
-                                <div style="display:flex; flex-direction:row; flex-basis:5%; align-items: center; margin-top:5px;">
-                                    <div style="flex-basis:40%; font-size:24px; font-weight:bold;"><a href="{% url 'localGame' %}?room={{game.roomCode}}">Room {{ game.roomCode }}</a></div>
-                                    
-                                    {% if game.player2 %}
-                                    
-                                        {% if request.user == game.player1 %}
-                                            <div style="flex-basis:60%; font-size:24px;">Against: <span style="font-weight: bold;">{{ game.player2 }}</span></div>
-                                        {% else %}
-                                            <div style="flex-basis:60%; font-size:24px;">Against: <span style="font-weight: bold;">{{ game.player1 }}</span></div>
-                                        {% endif %}
-                                    
-                                    {% else %}
-                                        <div style="flex-basis:60%; font-size:24px;">
-                                            Waiting on player
-                                        </div>
-                                    {% endif %}
-                                </div>
-                            {% endfor %}
-                        {% else %}
-                            <div>
-                                <h3>No network games to show!</h3>
-                            </div>
-                            <div>
-                                <h3><a href="{% url 'play' %}">Try starting a new one here!</a></h3>
-                            </div>
-                        {% endif %}
-                    </div>
-            </div>
         </div>
+
+        <div class="infoTable">
+
+            <div class="infoHeader">Network Games:</div>
+
+            {% for game in networkGames %}
+                <div class="infoItem">
+                    <a href="{% url 'networkGame' %}?room={{game.roomCode}}">Room {{ game.roomCode }}</a>
+                    &nbsp;
+
+                    {% if game.player2 %}
+                        {% if request.user == game.player1 %}
+                            <span>Against: {{ game.player2 }}</span>
+                        {% else %}
+                            <span>Against: {{ game.player1 }}</span>
+                        {% endif %}
+                    {% else %}
+                        <span>Waiting on player</span>
+                    {% endif %}
+                </div>
+            {% empty %}
+                <div class="infoItem">No network games to show.</div>
+                <div class="infoItem"><a href="{% url 'play' %}">Try starting a new one here!</a></div>
+            {% endfor %}
+
+        </div>
+
     </div>
 {% endblock %}
