--- a/pychess/templates/pychess/review.html
+++ b/pychess/templates/pychess/review.html
@@ -7,72 +7,103 @@ Review
 {% block body %}
 
 <style>
-    td 
-    {
-        text-align:center; 
-        font-size: large;
-        height: 25px;
+    .pageHeader{
+        font-size:36px;
+        text-align:center;
+        margin:2%;
+        font-weight: bold;
     }
 
-    th
-    {
-        width:150px; 
-        font-size: larger; 
+    .tableContainer{
+        display:flex;
+        flex-direction:row;
+        flex-basis:90%;
+        align-items:center;
+        justify-content:center;
+        margin-bottom:20px;
+    }
+
+    .infoTable{
+        display:flex;
+        flex-direction: column;
+        flex-basis:50%;
+        height:100%;
+        align-items: center;
+        margin-left:10px;
+        margin-right:10px;
+        border:solid;
+        border-color:aliceblue;
+        border-radius:15px;
+        overflow-y: scroll;
+    }
+
+    .infoRow{
+        display:flex;
+        flex-direction:row;
+        width:100%;
+        flex-basis:10%;
+        flex-grow:0;
+        flex-shrink:0;
+        align-items: center;
+        justify-content:center;
+        font-size:20px;
         font-weight: bold;
+        border-bottom:solid;
+    }
+
+    .infoItem{
+        height:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        flex-grow:0;
+        flex-shrink:0;
+        flex-basis:25%;
+        overflow:hidden;
+        text-overflow: ellipsis;
+    }
+
+    @media (max-width:1500px){
+        .infoTable{
+            flex-basis:90%;
+        }
     }
 
 </style>
 
-<div class="centeredContent" style="align-items: start;">
-    <div style="height:100%; display:flex; flex-direction: column;">
-
+<div class="pageHeader">
     {% if games %}
-
-
-        <div style="text-align: center; margin: 2%;">
-        <H1>Select a past game to review:</H1>
-        </div>
-
-        <br><br>
-        <div class="tableScroller">
-            <table style="table-layout: fixed;">
-                <thead>
-                    <tr>
-                        <th style=>Game Type:</th>
-                        <th style="width:150px; font-size: larger; font-weight: bold;">Opponent:</th>
-                        <th style="width:150px; font-size: larger; font-weight: bold;">Outcome:</th>
-                        <th style="width:150px; font-size: larger; font-weight: bold;">Room Code:</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for game in games %}
-                        <tr>
-                            <td>{{ game.gameType }}</td>
-                            <td style="overflow:hidden; text-overflow: ellipsis; text-wrap: nowrap;">{{ game.opponent }}</td>
-                            <td>{{ game.outcome }}</td>
-                            <td><a href="{% url 'reviewGame' game.roomCode %}">{{ game.roomCode }}</a></td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
+        Select a game to review:
     {% else %}
-
-        <div style="text-align: center; margin: 2%;">
-            <H1>No games to review!</H1>
-            <h3><a href="{% url 'play' %}">Try starting a new game here!</a></h3>
-        </div>
-        
-        <br><br>
-
-            
-
-         
-
+        No games to review!
     {% endif %}
+</div>
 
+<div class="tableContainer">
+    <div class="infoTable">
+        {% if games %}
+            <div class="infoRow">
+                <div class="infoItem">Room:</div>
+                <div class="infoItem">Opponent:</div>
+                <div class="infoItem">Outcome:</div>
+                <div class="infoItem">Game Type:</div>
+            </div>
+
+            {% for game in games %}
+                <div class="infoRow">
+                    <div class="infoItem"><a href="{% url 'reviewGame' game.roomCode %}">{{ game.roomCode }}</a></div>
+                    <div class="infoItem">{{ game.opponent }}</div>
+                    <div class="infoItem">{{ game.outcome }}</div>
+                    <div class="infoItem">{{ game.gameType }}</div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <div class="infoRow">
+                <a href="{% url 'play' %}">Try starting a new game here!</a>
+            </div>
+        {% endif %}
     </div>
 </div>
+
 
 {% endblock %}
